--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     schemas: public
 
   datasource:
-    url: jdbc:postgresql://rajje.db.elephantsql.com:5432/nowznfyd?socketTimeout=3
-    username: nowznfyd
-    password: ktaCqM8sgYZ_5w-gG24yzYRdTYhaEgqI
+    url: jdbc:postgresql://tai.db.elephantsql.com:5432/genkxvrd?socketTimeout=3
+    username: genkxvrd
+    password: dv59ovsY34g3w5PBUJgBILVp1XDdx8Gv
     driverClassName: org.postgresql.Driver
